test/compile_errors/err_labeled_block_expression.w
//! expect-check-fail: labeled block used as an expression

fn main:
    let x =
        'block:
            break 'block
